--- a/index.html
+++ b/index.html
@@ -50,6 +50,22 @@
                     <span class="prayer">العشاء</span>
                     <span class="time-value" id="isha-time"></span>
                 </div>
+                <div class="time">
+                    <span class="prayer">الثلث الاول</span>
+                    <span class="time-value" id="Firstthird-time"></span>
+                </div>
+                <div class="time">
+                    <span class="prayer">منتصف الليل</span>
+                    <span class="time-value" id="Midnight-time"></span>
+                </div>
+                <div class="time">
+                    <span class="prayer">الثلث الاخير</span>
+                    <span class="time-value" id="Lastthird-time"></span>
+                </div>
+                <div class="time">
+                    <span class="prayer">الامساك</span>
+                    <span class="time-value" id="Imsak-time"></span>
+                </div>
             </div>
         </div>
         
