--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">أسيوط</h1>
+        <h1 class="title mt-4">أسيوط</h1>
         <div class="prayer-day">
             <span class="day" id="day-en"></span> - <span class="date" id="date-en"></span> <br>
             <span class="day" id="day-ar"></span> - <span id="date-ar-day" class="ms-1"></span><span id="date-ar-month"></span>
@@ -68,8 +68,12 @@
                 </div>
             </div>
         </div>
-        
     </div>
+    <footer class="text-center mt-3" id="footer">
+        <p class="fs-2">Created by <a class="text-decoration-none fw-bold" href="https://www.linkedin.com/in/mahmoud-abdelkarim-%F0%9F%87%B5%F0%9F%87%B8-487452229/" target="_blank">MAHMOUD.JS</a></p>
+        <p class="fs-3">API used: <a class="text-decoration-none fw-bold" href="https://aladhan.com" target="_blank">Aladhan API</a></p>
+        <p class="fs-4">All rights reserved &copf; <span id="year"></span></p>
+    </footer>
     <!-- external bootstrap js 5.2.3 file  -->
     <script src="bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
     <!-- axios cdn  -->
